<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.ibrahim.a2zshop.fragments.change_password.ChangePasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.change_password.ChangePasswordFragment"
        android:padding="20dp">

        <TextView
            android:id="@+id/txtYourCurrent_changePass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_current_password"
            android:textColor="@color/primary_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtYourCurrent_changePass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/background_edittext"
            android:drawableStart="@drawable/ic_password_toggle"
            android:drawablePadding="5dp"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textAlignment="viewStart"
            android:text="@={model.currentPass}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtYourCurrent_changePass"
            app:layout_constraintTop_toBottomOf="@+id/txtYourCurrent_changePass" />

        <TextView
            android:id="@+id/txtYourNew_changePass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/your_new_password"
            android:textColor="@color/primary_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/txtYourCurrent_changePass"
            app:layout_constraintTop_toBottomOf="@+id/edtYourCurrent_changePass" />

        <EditText
            android:id="@+id/edtYourNew_changePass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_edittext"
            android:drawableStart="@drawable/ic_password_toggle"
            android:drawablePadding="5dp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:padding="15dp"
            android:text="@={model.newPass}"
            app:layout_constraintEnd_toEndOf="@+id/edtYourCurrent_changePass"
            app:layout_constraintStart_toStartOf="@+id/txtYourCurrent_changePass"
            app:layout_constraintTop_toBottomOf="@+id/txtYourNew_changePass" />

        <Button
            android:id="@+id/btnChangePasswordChange"
            style="@style/button_style3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:layout_marginTop="20dp"
            android:onClick="@{()->model.changePass()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtYourNew_changePass" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>