<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/homeAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/off_white">

                <TextView
                    android:id="@+id/txtA2Z"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/a2z"
                    android:textColor="@color/black"
                    android:layout_gravity="start"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/btnCancel"
                    style="@style/button_style3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_image_button_add_minus"
                    android:layout_gravity="end"
                    android:layout_marginEnd="5dp"
                    android:text="@string/cancel" />

                <EditText
                    android:id="@+id/edtSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/background_edittext_search"
                    android:drawableStart="@drawable/ic_search"
                    android:layout_gravity="center"
                    android:drawablePadding="5dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/what_are_you_looking_for"
                    android:inputType="text"
                    android:padding="8dp"
                    tools:ignore="Autofill" />


            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/home_nav"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeAppBar"
            app:navGraph="@navigation/home_nav_graph" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelVisibilityMode="labeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_navigation" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>